# pysatl-experiment

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cache.json  configuration_parser.py  critical_value.py  docker-compose.yml  example.py  exponential_experiment.py  graph_norm_experiment.py  main.py  mkdocs.yml  pdf_maker.py  pdf_maker_1.py  plots.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  weibull.py  weibull_experiment.py  weibull_experiment_from_config.py
.experiments/: 1_calculate_critical_values.json  2_evaluate_power.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  deploy-docs.yml
_old_/experiments/: graph_norm_experiment.py  weibull_experiment.py
_old_/generators/: gen.py
config_examples/: config_example.json  config_example_full.json  weibull_benchmark.json  weibull_experiment.json
docs/: index.md  requirements-docs.txt
docs/overrides/: main.html
docs/stylesheets/: ft.extra.css
en/main/: 404.html  index.html  objects.inv  requirements-docs.txt  sitemap.xml
examples/: config_example_full.json
experiment_example/configs/: 1_calculate_critical_values.json  2_evaluate_power.json  3_measure_time_complexity.json
experiments/: graph_norm_experiment.py  weibull_experiment.py
generators/: gen.py
pysatl_experiment/: __main__.py  constants.py  exceptions.py  misc.py
pysatl_experiment/cli/: shared.py
pysatl_experiment/configuration/: criteria_config.py
pysatl_experiment/experiment/: __init__.py  experiment.py  experiment_steps.py  pipeline.py
pysatl_experiment/factory/: critical_value.py
pysatl_experiment/loggers/: __init__.py  rich_handler.py  set_log_levels.py  std_err_stream_handler.py
pysatl_experiment/parallel/: buffered_saver.py  scheduler.py  task_spec.py  universal_worker.py
pysatl_experiment/persistence/: __init__.py  criterion_power_storage.py  experiment_storage.py  models.py  random_values_storage.py  time_complexity_storage.py
pysatl_experiment/report/: critical_value.py  power.py  time_complexity.py
pysatl_experiment/resolvers/: generator_resolver.py  hypothesis_resolver.py  iresolver.py
pysatl_experiment/worker/: critical_value.py  power.py
src/pysatl_experiment/: __main__.py
stattest/: __init__.py  configuration_parser.py  constants.py  exceptions.py  iparsable.py  main.py  parsable.py
stattest/cli/: cli.py
stattest/commands/: __init__.py  arguments.py  cli_options.py  experiment_commands.py
stattest/configuration/: configuration_parser.py
stattest/execution/: cache.py  data.py  execution.py  report_generator.py
stattest/experiment/: __init__.py  experiment.py  pipeline.py
stattest/experiment_new/: experiment.py
stattest/ext_package/: _statistic_test.py
stattest/loggers/: __init__.py  json_formatter.py  rich_console.py  set_log_levels.py
stattest/persistence/: __init__.py  models.py
stattest/resolvers/: __init__.py  builder_resolver.py  generator_resolver.py  hypothesis_resolver.py  iresolver.py  listener_resolver.py  store_resolver.py  test_resolver.py  worker_resolver.py
stattest/system/: version_info.py
stattest/test/: __init__.py  _test.py  common.py  exponent.py  goodness_of_fit.py  graph_goodness_of_fit.py  models.py  normal.py  weibull.py
stattest/tests/: calculate_exp.py  example.py
stattest_std/: constants.py
stattest_std/resolvers/: iresolver.py
stattest_std/test/: models.py  normal.py
stattest_std/tests/: abstract_test_case.py
tests/: AbstractTestCase.py  abstract_test_case.py  conftest.py  listener_test.py  test_misc.py  weibull_test.py
tests/configuration/: configuration_test.py
tests/core/: store_test.py
tests/distribution/: distribution_test.py
tests/exponentiality/: abstract_exponentiality_test_case.py  ahs_exp_test.py  atk_exp_test.py  co_exp_test.py  cvm_exp_test.py  dsp_exp_test.py  ep_exp_test.py  eps_exp_test.py  fz_exp_test.py  gd_exp_test.py  gini_exp_test.py  gredg_exp_test.py  grmd_exp_test.py  hg1_exp_test.py  hg2_exp_test.py  hm_exp_test.py  hp_exp_test.py  kc_exp_test.py  km_exp_test.py  ks_exp_test.py  lz_exp_test.py  mn_exp_test.py  pt_exp_test.py  rs_exp_test.py  sw_exp_test.py  we_exp_test.py  ww_exp_test.py
tests/factory/: test_abstract_experiment_factory.py  test_critical_value_factory.py  test_power_factory.py  test_time_complexity_factory.py
tests/loggers/: test_log_setup.py
tests/normality/: abstract_normality_test_case.py  ad_test.py  bhs_test.py  bonett_seier_test.py  botemps_meddahi1_test.py  botemps_meddahi2_test.py  cabana_cabana1_test.py  cabana_cabana2_test.py  chen_shapiro_test.py  coin_test.py  da_test.py  dagostino_test.py  dap_test.py  desgagne_lafaye_test.py  doornik_hasen_test.py  ep_test.py  filli_test.py  glen_leemis_barr_test.py  gmg_test.py  graph_edgesnum_test.py  graph_maxdegree_test.py  hosking1_test.py  hosking2_test.py  hosking3_t.py  hosking3_test.py  hosking4_test.py  jb_test.py  ks_test.py  kurtosis_test.py  lg_test.py  lilliefors_test.py  martinez_iglewicz_test.py  rj_test.py  robust_jarque_bera_test.py  sf_test.py  skew_test.py  spiegelhalter_test.py  sw_test.py  swm_test.py  swrg_test.py  (+4 more)
tests/parallel/: test_buffered_saver.py  test_scheduler.py  test_task_spec.py
tests/report/: test_critical_value_report_builder.py  test_power_report_builder.py  test_time_complexity_report_builder.py
tests/resolvers/: builder_resolver_tests.py  generator_resolver_test.py  hypothesis_resolver_test.py  listener_resolver_test.py  listener_resolver_tests.py  store_resolver_tests.py  test_resolver_test.py  test_resolver_tests.py  worker_resolver_test.py  worker_resolver_tests.py
tests/store/: benchmark_result_db_test.py  benchmark_result_sql_lite_test.py  critical_value_db_test.py  critical_value_file_store_test.py  critical_value_sql_lite_test.py  result_sql_lite_test.py  rvs_db_test.py  rvs_file_store_test.py  rvs_sqlite_test.py
tests/weibull/: abstract_weibull_test.py  ad_weibull_test.py  ks_weibull_test.py  los_weibull_test.py  msf_weibull_test.py  ok_weibull_test.py  rejg_weibull_test.py  (+7 more)
(+637 files in other folders)
