[tool.poetry]
name = "pysatl-experiment"
version = "0.0.0"
description = "package for PySATL math statistics experiments"
authors = ["PYSATL Team <pysatl@yahoo.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "pysatl_experiment"}]

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.25.1"
scipy = ">=1.11.2"
matplotlib = ">=3.8.0"
tqdm = ">=4.66.2"
fpdf2 = ">=2.7.8"
jinja2 = ">=3.1.5"
xhtml2pdf = ">=0.2.17"
pandas = ">=2.2.1"
sqlalchemy = ">=2.0.36"
python-rapidjson = "==1.23"
jsonschema = "==4.26.0"
rich = "==15.0.0"
click = ">=8.2.1"
dacite = "==1.9.2"
line_profiler = "5.0.2"
pydantic = "^2.11.9"
psycopg2 = "2.9.12"
pysatl-criterion = { version = "*", source = "testpypi" }
psutil = "^7.1.1"

[tool.poetry.group.dev.dependencies]
markdown = "3.10.2"
mkdocs = "1.6.1"
mkdocs-material = "9.7.6"
mdx-truly-sane-lists = "1.3"
pymdown-extensions = "10.21.3"
mike = "2.2.0"
isort = "8.0.1"
coveralls = "4.1.0"
pytest = "9.0.3"
pytest-cov = "7.1.0"
pytest-random-order = "1.2.0"
ruff = "0.15.15"
pytest-mock = "3.15.1"
pre-commit = "4.6.0"
mypy = ">=1.15,<3.0"
mkdocstrings-python = "^2.0.3"

[tool.poetry.scripts]
experiment = "pysatl_experiment.cli.cli.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.8.0,<2.0.0", extras = ["plugin"] }

[tool.isort]
line_length = 120
profile = "black"
lines_after_imports = 2
skip_glob = ["**/.env*", "**/env/*", "**/.venv/*", "**/docs/*", "**/user_data/*"]

[tool.ruff]
line-length = 120
extend-exclude = [".env", ".venv"]

[tool.ruff.lint]
select = [
  "C90", "B", "F", "E", "W", "UP", "I", "A", "TID", "YTT", "S", "PTH", "ASYNC", "NPY", "D",
]
ignore = [
  "E241", "E272", "E221", "B007", "B904", "S603", "S607", "S608", "NPY002",
  "D107", "D203", "D212", "D213", "D401", "D404",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", "S104", "S311", "S105", "S106", "S110", "D101", "D102", "D103",
]
"**/__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.mypy]
ignore_missing_imports = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

# Format for NON tagged commits
format-jinja = """
{%- if distance == 0 -%}
    {{ base }}
{%- else -%}
    {{ bump_version(base, -2) }}.dev{{ distance }}
{%- endif -%}
"""
